syntax = "proto3";

package ad;
option go_package = "lesson9/homework/internal/ports/grpc";
import "google/protobuf/timestamp.proto";

service AdService {
  rpc CreateAd(CreateAdRequest) returns (AdResponse) {}
  rpc ChangeAdStatus(ChangeAdStatusRequest) returns (AdResponse) {}
  rpc UpdateAd(UpdateAdRequest) returns (AdResponse) {}
  rpc ListAds(Mode) returns (ListAdResponse) {}
  rpc CreateUser(CreateUserRequest) returns (UserResponse) {}
  rpc GetUser(GetUserRequest) returns (UserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (UserResponse) {}
  rpc DeleteAd(DeleteAdRequest) returns (AdResponse) {}
}

enum ModeType {
  Default = 0;
  All = 1;
  ByAuthor = 2;
  ByCreation = 3;
  ByTitle = 4;
}

message Mode {
  ModeType mode = 1;
  oneof Data {
    int64 authorId = 2;
    string title = 3;
    google.protobuf.Timestamp time = 4;
  }
}

message CreateAdRequest {
  string title = 1;
  string text = 2;
  int64 user_id = 3;
}

message ChangeAdStatusRequest {
  int64 ad_id = 1;
  int64 user_id = 2;
  bool published = 3;
}

message UpdateAdRequest {
  int64 ad_id = 1;
  string title = 2;
  string text = 3;
  int64 user_id = 4;
}

message AdResponse {
  int64 id = 1;
  string title = 2;
  string text = 3;
  int64 author_id = 4;
  bool published = 5;
  google.protobuf.Timestamp CreationDate = 6;
  google.protobuf.Timestamp UpdateTime = 7;
}

message ListAdResponse {
  repeated AdResponse list = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message UserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
}

message GetUserRequest {
  int64 id = 1;
}

message DeleteUserRequest {
  int64 id = 1;
}

message DeleteAdRequest {
  int64 ad_id = 1;
  int64 author_id = 2;
}
